<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200sp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_margin="5sp"
    app:cardCornerRadius="10sp"
    app:cardElevation="5sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/pdfImage"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:padding="10sp"
            android:src="@drawable/pdf_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/book_id"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#F44336" />

            <TextView
                android:id="@+id/bookname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/book_tittle"
                android:padding="5sp"
                android:textColor="#0864AF"/>

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Category"
                android:padding="5sp"/>

            <TextView
                android:id="@+id/borrowedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/borrowed_date"
                android:padding="5sp"/>

            <TextView
                android:id="@+id/deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/dead_line"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FA0404" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>