<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300sp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_margin="5sp"
    app:cardCornerRadius="5sp"
    app:cardElevation="5sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/pdfImage"
            android:layout_width="match_parent"
            android:layout_height="145sp"
            android:padding="10sp"/>

        <TextView
            android:id="@+id/bookname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pdf_document"
            android:padding="5sp"
            android:textColor="#0864AF"/>

        <TextView
            android:id="@+id/file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/file_name"
            android:padding="5sp"/>

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/category"
            android:padding="5sp"/>

        <TextView
            android:id="@+id/uploadedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/aploaded_date"
            android:padding="5sp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>